añadiendo ingrese un numero al archivo

--- a/sentenciasdecontrol.ipynb
+++ b/sentenciasdecontrol.ipynb
@@ -22,9 +22,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d32293b5-dcff-43ca-85f7-954a90366e2c",
+   "metadata": {},
+   "source": [
+    "crear un programa en python donde se ingrese por teclado un numero y lo imprime en pantalla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f8228753-4f60-4de1-b1c5-026cc4adaec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ingrese un numero 7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero= int(input(\"ingrese un numero\"))\n",
+    "print(numero)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc3757d0-8421-4204-a8a0-68142e852fc5",
+   "id": "ae49d77f-1858-4a33-b8ac-1498b26e07ff",
    "metadata": {},
    "outputs": [],
    "source": []
