Agregando ejercicios de estructuras de control y nuevos notebooks

--- a/sentenciasdecontrol.ipynb
+++ b/sentenciasdecontrol.ipynb
@@ -56,9 +56,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "361367de-b1f8-4940-a0fe-1e506e4a2118",
+   "metadata": {},
+   "source": [
+    "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/examen.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae49d77f-1858-4a33-b8ac-1498b26e07ff",
+   "id": "736a1e78-60cd-4e08-a3ef-b4a22f59a551",
    "metadata": {},
    "outputs": [],
    "source": []
