Agregando ejercicios de estructuras de control y nuevos notebooks

--- a/debernumero1.ipynb
+++ b/debernumero1.ipynb
@@ -35,11 +35,11 @@
     "\n",
     "1.1 Selección (sentencias condicionales)\n",
     "\n",
-    "• Selección de una de varias alternativas en base a alguna condición.\n",
+    "*Selección de una de varias alternativas en base a alguna condición.\n",
     "\n",
-    "• Indentación para estructurar el código\n",
+    "* Indentación para estructurar el código\n",
     "\n",
-    "• Importante el símbolo ‘:’"
+    "* Importante el símbolo ‘:’"
    ]
   },
   {
@@ -422,16 +422,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc5735e5-a47c-4645-bee5-bb5f7fb74a56",
+   "id": "5fd4ac22-fbbf-4b34-8139-61222e96f1af",
    "metadata": {},
    "source": [
-    "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/deberbumero1.ipynb"
+    "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/debernumero1.ipynb"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff46afd4-02b6-4346-85ae-fc1be67b35c5",
+   "id": "f963021d-5b3b-4c34-9cd3-fdcb6c514f79",
    "metadata": {},
    "outputs": [],
    "source": []
