Agregando calculadora match-case y ecuacion de segundo grado

--- a/debernumero1.ipynb
+++ b/debernumero1.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "1.1 Selección (sentencias condicionales)\n",
     "\n",
-    "*Selección de una de varias alternativas en base a alguna condición.\n",
+    "* Selección de una de varias alternativas en base a alguna condición.\n",
     "\n",
     "* Indentación para estructurar el código\n",
     "\n",
@@ -422,16 +422,351 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fd4ac22-fbbf-4b34-8139-61222e96f1af",
+   "id": "63063d27-6b2a-4304-8627-1f8d510146c8",
    "metadata": {},
    "source": [
     "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/debernumero1.ipynb"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7adcfb42-a59a-4b21-96d5-cd6a939151e2",
+   "metadata": {},
+   "source": [
+    "2.switch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ae985e76-3c7b-4883-86ed-1c368d3d9da0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = -6\n",
+    "match a:\n",
+    " case _ if a > 0:\n",
+    "  print('positive')\n",
+    " case _ if a == 0:\n",
+    "  print('zero')\n",
+    " case _ if a < 0:\n",
+    "  print('negative')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0d4b873c-ddeb-4e21-96e8-75b71ca2c14b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong Day\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'l' #week day\n",
+    "match a:\n",
+    " case 'L':\n",
+    "  print(\"Lunes\")\n",
+    " case 'M':\n",
+    "  print(\"Martes\")\n",
+    " case 'X':\n",
+    "  print(\"Miercoles\")\n",
+    " case _:\n",
+    "  print(\"Wrong Day\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ebcd132-5137-4a1c-ab7a-8c97b11e075b",
+   "metadata": {},
+   "source": [
+    "### Expresión ternaria\n",
+    "* Estructura if-else condensado en una línea.\n",
+    "* Se recomienda usar solo en casos sencillos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0a93ce87-de9d-41c9-b2d8-6c2dfa1c0d0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # # Ejemplo: cálculo del valor absoluto de un número.\n",
+    "x = -3\n",
+    "resultado = x if x >= 0 else -x\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4c9f72a8-b618-4aab-ae61-37d6606eb99e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = -3\n",
+    "if val >=0:\n",
+    " resultado = val\n",
+    "else:\n",
+    " resultado = -val\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01fbb1a9-a034-49f2-9a94-3a6f614715d9",
+   "metadata": {},
+   "source": [
+    "### Concatenación de comparaciones\n",
+    "* Se pueden concatenar comparaciones en una misma expresión: <Br>\n",
+    "– and: true, si ambos son true.<br>\n",
+    "– or: true, si al menos uno es true.<br>\n",
+    "– not: inversión del valor de verdad de una expresión.<br>\n",
+    "*‘elif’ para comparar tras un ‘if’<br>\n",
+    "Enlace a Tablas de Verdad."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "92a424cc-77a6-41a0-984f-224fcddd5f50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meh\n"
+     ]
+    }
+   ],
+   "source": [
+    "genero = 'Drama'\n",
+    "fecha_de_estreno = 1989\n",
+    "if genero == 'Comedia' or genero == 'Acción':\n",
+    " print('Buena película!')\n",
+    "elif fecha_de_estreno >= 1990 and fecha_de_estreno < 2000:\n",
+    " print('Buena década!')\n",
+    "else:\n",
+    " print('Meh')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "975b4a00-d324-4361-81f3-0596d780e282",
+   "metadata": {},
+   "source": [
+    "### Comparación de variables: ‘==’ vs ‘is’\n",
+    "* ‘==’ compara si el valor de las variables es el mismo\n",
+    "* ‘is’ compara si los objetos en las variables son iguales (referencia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a1d3b72c-411a-4c70-8aa8-89cd9c9c03da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "True\n",
+      "2961072437040\n",
+      "2961072437040\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1000\n",
+    "b = a\n",
+    "print(a is b)\n",
+    "print(a == b)\n",
+    "c=type(a)\n",
+    "print(c)\n",
+    "d=type(b)\n",
+    "print(d)\n",
+    "print(c==d)\n",
+    "print(id(a))\n",
+    "print(id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "650daef2-6b70-4421-ae14-a56e4d6542af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "2961073094720\n",
+      "2961072900800\n",
+      "2961073094720\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = [1, 2, 3]\n",
+    "c = a\n",
+    "print(a is b)\n",
+    "print(a is c)\n",
+    "print(a == b)\n",
+    "print(id(a))\n",
+    "print(id(b))\n",
+    "print(id(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e5b1dbe-d3ee-4939-a3d5-5e2c20292522",
+   "metadata": {},
+   "source": [
+    "### Ejercicios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e200450a-efbf-438b-94cf-65d833950c8d",
+   "metadata": {},
+   "source": [
+    "1. Escribir un programa en python donde el usuario ingrese por teclado el nombre de\n",
+    "la operacion suma,resta,multuplicación o división también el usuario debera ingresar\n",
+    "dos números de cualquier tipo mediate un switch comparar que operación ingresa y\n",
+    "mostrar en pantalla el resultado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "265bdebb-afea-4a3b-b6ea-7d67be2a6bba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Introduce la operación (suma, resta, multiplicacion, division):  suma\n",
+      "Introduce el primer número:  10\n",
+      "Introduce el segundo número:  29\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado de la suma es: 39.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pedimos los datos al usuario\n",
+    "operacion = input(\"Introduce la operación (suma, resta, multiplicacion, division): \").lower().strip()\n",
+    "num1 = float(input(\"Introduce el primer número: \"))\n",
+    "num2 = float(input(\"Introduce el segundo número: \"))\n",
+    "\n",
+    "# Implementación del \"switch\" mediante match-case\n",
+    "match operacion:\n",
+    "    case \"suma\":\n",
+    "        resultado = num1 + num2\n",
+    "        print(f\"El resultado de la suma es: {resultado}\")\n",
+    "    case \"resta\":\n",
+    "        resultado = num1 - num2\n",
+    "        print(f\"El resultado de la resta es: {resultado}\")\n",
+    "    case \"multiplicacion\":\n",
+    "        resultado = num1 * num2\n",
+    "        print(f\"El resultado de la multiplicación es: {resultado}\")\n",
+    "    case \"division\":\n",
+    "        # Verificamos que no se divida por cero\n",
+    "        if num2 != 0:\n",
+    "            resultado = num1 / num2\n",
+    "            print(f\"El resultado de la división es: {resultado}\")\n",
+    "        else:\n",
+    "            print(\"Error: No se puede dividir entre cero.\")\n",
+    "    case _:\n",
+    "        print(\"Operación no válida. Por favor, elige una de las opciones indicadas.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aac5811-cec9-43e6-aabb-17d073b3e8cc",
+   "metadata": {},
+   "source": [
+    "2. Desarrollar un programa en python donde se resuelva una ecuación de segundo\n",
+    "grado mediante la fórmula general, el usuario debe ingresar por teclado los valores\n",
+    "a,b y c y mostrar en pantalla los valores de la ecuación."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f963021d-5b3b-4c34-9cd3-fdcb6c514f79",
+   "id": "359587c1-9b5f-4a1a-ad1f-aba6c68028c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Entrada de datos\n",
+    "a = float(input(\"Valor de a: \"))\n",
+    "b = float(input(\"Valor de b: \"))\n",
+    "c = float(input(\"Valor de c: \"))\n",
+    "\n",
+    "# Cálculo del discriminante (la parte dentro de la raíz)\n",
+    "discriminante = b**2 - 4*a*c\n",
+    "\n",
+    "if discriminante < 0:\n",
+    "    print(\"La ecuación no tiene soluciones reales.\")\n",
+    "else:\n",
+    "    # Cálculo de las dos soluciones\n",
+    "    x1 = (-b + math.sqrt(discriminante)) / (2*a)\n",
+    "    x2 = (-b - math.sqrt(discriminante)) / (2*a)\n",
+    "\n",
+    "    print(f\"Resultados: x1 = {x1}, x2 = {x2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd25002c-8643-4f96-929e-ea19f029faed",
    "metadata": {},
    "outputs": [],
    "source": []
