Agregando calculadora match-case y ecuacion de segundo grado

--- a/debernumero1.ipynb
+++ b/debernumero1.ipynb
@@ -28,6 +28,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bf47204-97e2-428e-a2eb-8f9c4a5d3de1",
+   "metadata": {},
+   "source": [
+    "##### Nombre: dayana romero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c6f1717d-1161-4ed1-9ca7-8ec29856969a",
    "metadata": {},
    "source": [
@@ -738,10 +746,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "359587c1-9b5f-4a1a-ad1f-aba6c68028c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Valor de a:  1\n",
+      "Valor de b:  2\n",
+      "Valor de c:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados: x1 = -1.0, x2 = -1.0\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -764,9 +789,295 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17bd4af4-e266-4501-873b-56dd0004597d",
+   "metadata": {},
+   "source": [
+    "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/debernumero1.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86974ad6-f00b-4e8f-9f9c-b2cf2098b9a8",
+   "metadata": {},
+   "source": [
+    "### Valor booleano\n",
+    "* Todos los objetos en Python tiene inherentemente un valor booleano: True o False.\n",
+    "* Cualquier número distinto de 0 ó cualquier objeto no vacío tienen valor True.\n",
+    "* El número 0, objetos vacíos y el objeto especial None tienen valor False.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2164283f-d0f0-45af-8612-e7781d0e6921",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a es True\n",
+      "b es False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = -10 #True\n",
+    "b = None #False\n",
+    "if a:\n",
+    " print(\"a es True\")\n",
+    "if not b:\n",
+    " print(\"b es False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "226723b5-eed3-47e1-b4f2-5b14d19c4d0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista vacía\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = [1,2,3]\n",
+    "# a c le reasigno None\n",
+    "c = None #0 es igual a vacio a nada\n",
+    "if c:\n",
+    " print(\"Lista no vacía\")\n",
+    "else:\n",
+    " print(\"Lista vacía\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a456df3-4003-4589-87b7-67241151536c",
+   "metadata": {},
+   "source": [
+    "### 3 Iteración (bucles)\n",
+    "* Repetición de un bloque de código.<br>\n",
+    "* La terminación del bucle depende del tipo de bucle.<br>\n",
+    "*  Dos tipos: while y for.\n",
+    "### Bucle ‘while’\n",
+    "* Repetición de un bloque de código hasta que se deje cumplir una expresión (es decir, hasta\n",
+    "que una condición evalue a False).<br>\n",
+    "* Si la condición evalua a False desde el principio, el bloque de código nunca se ejecuta.<br>\n",
+    "* Cuidado con los bucles infinitos.<br>\n",
+    "\n",
+    "Formato general:\n",
+    "while test:           # Mientras se cumple la condición<br>\n",
+    "statements            # Instrucciones a ejecutar\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd25002c-8643-4f96-929e-ea19f029faed",
+   "id": "974d0a0e-319d-426d-b947-fe3584635cdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Ejemplo: Mostrar los primeros 3 objetos de una lista\n",
+    "indice = 0\n",
+    "numeros = [9, 4, 7, 1, 2]\n",
+    "while indice < 3:\n",
+    " print(numeros[indice])\n",
+    "indice =indice+1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97edaab4-67ed-4e1b-a978-3b675a45b7bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejemplo: contar y mostrar los números inferiores a 10.\n",
+    "numeros = [33, 3, 9, 21, 1, 7, 12, 10, 8]\n",
+    "contador = 0\n",
+    "indice = 0\n",
+    "while indice < len(numeros):\n",
+    " if numeros[indice] < 10:\n",
+    "  print(numeros[indice])\n",
+    "contador += 1\n",
+    "indice += 1\n",
+    "print('Contador:', contador)\n",
+    "print('Indice:', indice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b466d17-c2e3-40b2-bccb-7489138ab9b2",
+   "metadata": {},
+   "source": [
+    "nombre = 'Pablo'\n",
+    "while nombre: # Mientras 'nombre' no sea vacío\n",
+    " print(nombre)\n",
+    "nombre = nombre[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a49ce470-f4dc-4804-a84c-3c2b8f38bd7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #bucle infinito\n",
+    "i = 0\n",
+    "while i < 10:\n",
+    "print(i)\n",
+    "i += 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed7fa1ef-6a49-4856-a13e-0284420be0db",
+   "metadata": {},
+   "source": [
+    "Desarrollar un programa en python donde el usuario ingrese dos numeros por teclado el primer numero va a ser el inicio de un rango el segundo numero va a ser el final de dicho rango mediante el ciclo while verificar cuantos numeros son pares y mostrar los numeros y el total de numero pares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "acbdd2cc-949b-4aca-bfa9-44dc78ce546f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ingrese el primer numero del rango:  2\n",
+      "ingrese el segundo numero del rango:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "el total de numeros pares es 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "## #ingresamos en letras los dos numeros por teclado que nos pide del rango\n",
+    "numeros = int(input(\"ingrese el primer numero del rango: \"))\n",
+    "numero2 = int(input(\"ingrese el segundo numero del rango: \"))\n",
+    "contador = 0\n",
+    "\n",
+    "while numeros < numero2:\n",
+    "    if numeros % 2 == 0:\n",
+    "        print(numeros)\n",
+    "        contador += 1\n",
+    "    # Esta línea debe estar alineada con el 'if'\n",
+    "    numeros += 1\n",
+    "\n",
+    "print(\"el total de numeros pares es\", contador)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f93c24d5-6bc1-4efe-95c1-0db6593fe217",
+   "metadata": {},
+   "source": [
+    "Desarrolle un programa en python donde permita al usuario ingresar un numero entero positivo repetitivamente el programa debe continuar mientras se ingrese un numero mayor a cero. Al finalizar el proceso debe mostrarme la suma de los numero ingresados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0a91ec8a-b30b-44f3-a95c-9e94bc42290d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un numero:  4\n",
+      "Ingrese un numero:  4\n",
+      "Ingrese un numero:  4\n",
+      "Ingrese un numero:  4\n",
+      "Ingrese un numero:  4\n",
+      "Ingrese un numero:  4\n",
+      "Ingrese un numero:  -4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma es: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "#total acumulado\n",
+    "suma = 0\n",
+    "#inicia un bucle que se repite sin fin\n",
+    "while True:\n",
+    "    try:#convierte lo que se escribe en un numero\n",
+    "        dato = int(input('Ingrese un numero: '))\n",
+    "        if dato < 0: break\n",
+    "        suma += dato #suma del numero total\n",
+    "    except ValueError:\n",
+    "        break #si se deja vacio se vuelve un bucle infinito\n",
+    "\n",
+    "print(\"La suma es:\", suma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d66093e-ecd8-403b-ab04-0695a9983256",
+   "metadata": {},
+   "source": [
+    "Crear un programa en python donde el usuario ingrese un numero por tecalo verificar si un numero es primo usando whyle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a83f051c-10b0-46a5-bedb-4ed774059796",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Número:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es primo\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Número: \"))\n",
+    "d = 2 # Divisor inicial\n",
+    "primo = True if n > 1 else False # 1 o menores no son primos\n",
+    "\n",
+    "while d < n and primo: # Se ejecuta mientras d sea menor a n y siga siendo primo\n",
+    "    if n % d == 0:\n",
+    "        primo = False # Si el resto es 0, encontramos un divisor\n",
+    "    d += 1 # Aumentamos el divisor para evitar el bucle infinito\n",
+    "\n",
+    "print(\"Es primo\" if primo else \"No es primo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f8f4609-f17d-4de2-940e-ffc90fcce5a3",
    "metadata": {},
    "outputs": [],
    "source": []
