Agregando calculadora match-case y ecuacion de segundo grado

--- a/debernumero1.ipynb
+++ b/debernumero1.ipynb
@@ -937,6 +937,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29b1b04a-3e5a-4682-a4e6-808a71aa249d",
+   "metadata": {},
+   "source": [
+    "### Ejercicios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ed7fa1ef-6a49-4856-a13e-0284420be0db",
    "metadata": {},
    "source": [
