Agregando calculadora match-case y ecuacion de segundo grado

--- a/estructurasdecontrol.ipynb
+++ b/estructurasdecontrol.ipynb
@@ -1083,9 +1083,313 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "400cafcf-db4b-4538-bff8-e79acc2b9d8c",
+   "metadata": {},
+   "source": [
+    "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/debernumero1.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6027e3e-cc83-456a-b77d-7b691ce9c827",
+   "metadata": {},
+   "source": [
+    "### Bucle ‘for’\n",
+    "* Permite recorrer los items de una sequencia o un objeto iterable.\n",
+    "* Funciona en strings, listas, tuplas, etc.<br>\n",
+    "Formato general:\n",
+    "for item in objeto:<br>     # Asigna los items del objeto a la variable item en cada iteración\n",
+    "statements   <br>         # Instrucciones a ejecutar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "495d9046-40e3-4453-9e9b-911c593d19d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix\n",
+      "The purge\n",
+      "Avatar\n",
+      "Star Wars\n"
+     ]
+    }
+   ],
+   "source": [
+    "peliculas = ['Matrix', 'The purge', 'Avatar', 'Star Wars']\n",
+    "for pelicula in peliculas:\n",
+    " print(pelicula)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eef45d3-1620-4439-a1f5-dde1807a15da",
+   "metadata": {},
+   "source": [
+    "*También se usa para iterar un número preestablecido de veces (counted loops)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "976cf44f-5549-4b8d-bfde-225d004a245e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    " for i in range(10):\n",
+    "   print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0599a4c5-0c1e-488b-817b-a2cdaec34216",
+   "metadata": {},
+   "source": [
+    "* range es útil en combinación con len porque permite acceder a los elementos de una secuencia\n",
+    "por posición"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d65a455f-ec5b-43ba-99ac-f8c2f8759474",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "a\n",
+      "b\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = 'Pablo'\n",
+    "for i in range(len(nombre)):\n",
+    " print(nombre[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "69e9706d-d0c9-404a-a007-5bbcd3d42e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "a\n",
+      "b\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "for letra in nombre:\n",
+    " print(letra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46b04897-e2fc-42f3-8e71-369ad59b3e25",
+   "metadata": {},
+   "source": [
+    "* Iteración de tuplas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "78bb0bcb-3de2-4d75-91e9-af468598d3e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "3 4\n",
+      "5 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuplas = [(1, 2,), (3, 4), (5, 6)]\n",
+    "for a, b, in tuplas:\n",
+    " print(a, b,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a05474c2-2a04-4a23-bac6-69abcd214626",
+   "metadata": {},
+   "source": [
+    "* Iteración de diccionarios. Se iteran las claves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "57a2fcd0-85ec-409b-a097-dc8c6abd18f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a => 1\n",
+      "b => 2\n",
+      "c => 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "diccionario = {'a': 1, 'b': 2, 'c': 3}\n",
+    "for key in diccionario:\n",
+    " print(f\"{key} => {diccionario[key]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30dfac45-e44f-4d78-ae77-617e195c8a80",
+   "metadata": {},
+   "source": [
+    "* Para iterar los pares (clave-valor) o únicamente los valores, se deben usar los métodos items\n",
+    "y values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1830c296-712d-43d5-8911-d98853a4df27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a => 1\n",
+      "b => 2\n",
+      "c => 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in diccionario.items():\n",
+    " print(f\"{key} => {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "acfc9435-a1dd-4a0b-a3a6-4cf17433c8de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in diccionario.values():\n",
+    " print(value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be905a8e-ce08-4174-a5c9-2826d9f008c5",
+   "metadata": {},
+   "source": [
+    "### ejercicios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5df3e3ac-702f-4bd6-a304-f7188588c3e7",
+   "metadata": {},
+   "source": [
+    "Crear un programa en python donde el usuario ingrese un número por teclado verificar que todos los numeros del rango del número ingresado son par o impar y mostrar en pantalla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "68ec4c3a-cbd0-484a-a878-4ad43399c91e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese el numero:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero es impar 1\n",
+      "El numero es par 2\n",
+      "El numero es impar 3\n",
+      "El numero es par 4\n",
+      "El numero es impar 5\n",
+      "El numero es par 6\n",
+      "El numero es impar 7\n",
+      "El numero es par 8\n",
+      "El numero es impar 9\n",
+      "El numero es par 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = int(input(\"Ingrese el numero: \"))\n",
+    "\n",
+    "# Aquí hacemos que el índice inicie en 1 y vaya sumando 1 al rango\n",
+    "for i in range(1, numero + 1):\n",
+    "    if i % 2 == 0:\n",
+    "        print(\"El numero es par\", i)\n",
+    "    else:\n",
+    "        print(\"El numero es impar\", i)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f8f4609-f17d-4de2-940e-ffc90fcce5a3",
+   "id": "9d2e733a-0561-4deb-8945-5a51433fab68",
    "metadata": {},
    "outputs": [],
    "source": []
