Ahora si con la funcion esta_en_rango

--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -1435,10 +1435,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "4f67f3fc-5f75-46b7-8275-9a4ff984f032",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Está el número en el rango?: True\n"
+     ]
+    }
+   ],
    "source": [
     "def esta_en_rango(numero, inicio, fin):\n",
     "    # En Python podemos usar la comparación directa: inicio <= numero <= fin\n",
