Agregando funcion esta_en_rango

--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -1619,7 +1619,9 @@
    "id": "b0afa92b-3a30-4ece-894c-1570384ffbb0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/funciones.ipynb"
+   ]
   }
  ],
  "metadata": {
