--- a/estructurasdecontrol.ipynb
+++ b/estructurasdecontrol.ipynb
@@ -2685,9 +2685,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e775202-c304-47cf-9393-1f3b3c48a0f8",
+   "metadata": {},
+   "source": [
+    "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/estructurasdecontrol.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c20d64e-fad5-4486-af36-6377ce21d1b6",
+   "id": "06fd7df6-832a-49a2-b467-343a5e21876a",
    "metadata": {},
    "outputs": [],
    "source": []
