Añadidos ejercicios de NumPy

--- a/Ficheros.ipynb
+++ b/Ficheros.ipynb
@@ -387,9 +387,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd51324a-632c-422e-9bc7-504b2a73cb01",
+   "metadata": {},
+   "source": [
+    "https://github.com/dayanaromero937-ship-it/practicasintroduccionapython/blob/main/Ficheros.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "966935bb-c6e2-4350-82c1-7ab99edc39c1",
+   "id": "95c92d55-db16-470f-b547-d9b3fd1e7838",
    "metadata": {},
    "outputs": [],
    "source": []
